feat(signup-page): a user should see a sign up page to register -add signup form -add signin form -add js to toggle betwwen both forms [Finishes #166001116]

--- a/template/index.html
+++ b/template/index.html
@@ -23,11 +23,11 @@
             
             <nav>
                 <ul class="navigation">
-                    <li><a href="#default">HOME</a><li>
-                    <li><a href="#cars">INVENTORY</a><li>
-                    <li><a href="#services">ABOUT US</a>
-                    <li><a href="#Signup">REGISTER</a>
-                    <li><a href="#signIn">LOG IN</a>
+                        <li><a href="./index.html">HOME</a><li>
+                                <li><a href="./inventory.html">INVENTORY</a><li>
+                                <li><a href="./about.html">ABOUT US</a>
+                                <li><a href="./signup.html">REGISTER</a>
+                                <li><a href="./signup.html">LOG IN</a>
             </nav>
             </div>
         </div>
