--- a/client/css/about.css
+++ b/client/css/about.css
@@ -1,8 +1,8 @@
 body {
-    font-family: helvetica neue,Helvetica,Arial,sans-serif;
+    font-family: Helvetica,Arial,sans-serif;
     font-size: 14px;
     line-height: 1.42857143;
-    color: #333;
+    color: #ffffff;
     background-color: #b34952;
     padding-top: 0px;
 }
@@ -20,17 +20,17 @@ nav {
     display: inline-block;
     margin-left: 30px;
     clear: auto;
-    color: white;
+    color: goldenrod;
 }
 
 .navigation li:first-child {
     margin: 0;
-    }
+    } 
     
  .navigation li a:link {
    text-decoration: none;
    text-transform: uppercase;
-   color:whitesmoke; 
+   color:rgb(44, 40, 44); 
     }
     
 .navigation li a:hover {
@@ -39,11 +39,17 @@ nav {
     text-decoration: none;
     text-transform: uppercase; 
     padding: 10px 20px;
-    background-color: #b34952;
+    background-color: #837f80;
+}
+.about-section {
+    width: 100%;
+    padding:40px 0;
+    background: #b34952;
 }
 .page-content {
-    margin-top: 40px;
-    padding-bottom: 50px;
+   padding: 0 20px;
+   max-width: 1000px;
+   overflow: hidden;
 }
 .page-content h1 {
     border-bottom: 3px solid #2badc1;
@@ -54,105 +60,55 @@ nav {
     margin-bottom: 20px;
     padding-bottom: 20px;
     text-transform: uppercase;
+    text-align: center;
 }
-.page-content p {
-    color: #393939;
+ p {
+    color: #f1bebe;
     font-family: Calibri;
-    font-size: 17px;
-}
-h1 {
-    margin-top: 40px;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    margin: .67em 0;
-    display: block;
-}
-.no-padding {
-    padding:0 !important;
-}
-.white-bg {
-    background: #fff;
-}
-.container {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-.clearfix ::before {
-    display: table;
-    content: " ";
-}
-.clearfix ::after {
-    display: table;
-    content: " ";
-    clear: both;
-}
-.page-contentt {
-    background: rgba(237,236,232,.95) none repeat scroll 0 0;
-    top: 123px;
-    position: relative;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
-}
-.column {
-    position: relative;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
-}
-div {
-    display: block;
-}
-p {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-hr {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border: 0;
-    border-top: 1px solid #eee;
-    height: 0;
-    display: block;
-    unicode-bidi: isolate;
-    margin-block-start: 0.5em;
-    margin-block-end: 0.5em;
-    margin-inline-start: auto;
-    margin-inline-end: auto;
-    overflow: hidden;
-}
-.page-contentt p {
-    font-size: 17px;
-    color: #393939;
-}
-@media only screen and (max-width: 767px) {
-.page-content h1 {
-    font-size: 22px;
-}
-}
-h2 {
     font-size: 30px;
-     font-family: inherit;
-    font-weight: 500;
-    line-height: 1.1;
-    color: inherit;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+
 }
-.coll {
-    position: relative;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
+.about {
+    padding-right:30px;
 }
+.about a {
+    display:inline-block;
+    color: #393939;
+    text-decoration: none;
+    border: 2px solid #393939;
+    border-radius: 24px;
+    padding: 8px 40px ;
+    transition: 0.4s linear;
+}
+.about a:hover{
+color: aqua;
+background: #393939;
+}
+.about p {
+    text-align: justify;
+    margin-bottom: 20px;
+}
+@media only screen and (max-width: 700px) {
+.about-section {
+    flex: 100%;
+    margin: 10px 0;
+}
+.about {
+    padding: 0;
+    text-align: center;
+}
+}
+
+ h2 {
+    font-size: 30px;
+    border-bottom: 3px solid #9b836d09;
+    color: rgb(231, 182, 182);
+    font-family: open sans,sans-serif;
+    font-size: 40px;
+    font-weight: 300;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
